--- a/Gaming_Tournament.html
+++ b/Gaming_Tournament.html
@@ -200,7 +200,7 @@ footer::before {
 
 <header>
   <!-- Replace with your logo -->
-  <img src="LEVEL UP.png" alt="LEVEL UP Logo" class="logo">
+  <img src="LEVEL-UP.png" alt="LEVEL UP Logo" class="logo">
   <h1>LEVEL UP Gaming Tournament 2025</h1>
   <h2>Location: Mostar</h2>
   <p>Date: 12.12.2025</p>
