--- a/Gaming_Tournament.html
+++ b/Gaming_Tournament.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>LEVEL UP - Gaming Tournament 2025</title>
+  <link rel="icon" type="image/png" href="LEVEL-UP.png">
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
 <style>
 * {margin:0;padding:0;box-sizing:border-box;}
@@ -200,7 +201,6 @@ footer::before {
 
 <header>
   <!-- Replace with your logo -->
-  <img src="LEVEL-UP.png" alt="LEVEL UP Logo" class="logo">
   <h1>LEVEL UP Gaming Tournament 2025</h1>
   <h2>Location: Mostar</h2>
   <p>Date: 12.12.2025</p>
