--- a/Gaming_Tournament.html
+++ b/Gaming_Tournament.html
@@ -276,7 +276,7 @@ setInterval(()=>{
             const message = document.getElementById("message").value;
 
             // Format mailto link
-            const mailtoLink = `mailto:guidecommunity.contacts@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(
+            const mailtoLink = `mailto:game.tournament12@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(
                 "Name: " + name + "\n" +
                 "Email: " + email + "\n\n" +
                 "Message:\n" + message
