--- a/Gaming_Tournament.html
+++ b/Gaming_Tournament.html
@@ -241,7 +241,7 @@ footer::before {
 </form>
 
 <footer>
-  <p>© 2025 LEVEL UP Tournament — All Rights Reserved</p>
+  <p>Ⓖ 2025 LEVEL UP Tournament — All Rights Reserved Ⓖ</p>
   <p>Follow us for updates and live event coverage.</p>
 </footer>
 
